[gd_scene load_steps=15 format=3 uid="uid://dtnatxc7ibvff"]

[ext_resource type="Script" path="res://Scripts/World.gd" id="1_6x438"]
[ext_resource type="PackedScene" uid="uid://djw2tsl1jhe0i" path="res://Scenes/ObstacleSet.tscn" id="2_mv34t"]
[ext_resource type="Script" path="res://Scenes/GameOver.gd" id="3_hro72"]
[ext_resource type="PackedScene" uid="uid://dytpq0ns5qjcq" path="res://Scenes/Player.tscn" id="3_x24u5"]
[ext_resource type="Script" path="res://Scripts/ObstacleCollector.gd" id="4_eybra"]
[ext_resource type="AudioStream" uid="uid://cxmbjj88lugva" path="res://point.mp3" id="5_aww74"]
[ext_resource type="PackedScene" uid="uid://bk6m3mju7spqc" path="res://Scenes/Cloud.tscn" id="7_1qkpy"]

[sub_resource type="Gradient" id="Gradient_u76m0"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.392103, 0.582538, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uq7je"]
gradient = SubResource("Gradient_u76m0")

[sub_resource type="Gradient" id="Gradient_l1vl2"]
offsets = PackedFloat32Array(0.363636)
colors = PackedColorArray(0, 0.629484, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_djcul"]
gradient = SubResource("Gradient_l1vl2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yo1q"]
size = Vector2(50, 720)

[sub_resource type="LabelSettings" id="LabelSettings_vkb0y"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_11ggy"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_6x438")
ObstacleSetScene = ExtResource("2_mv34t")
CloudScene = ExtResource("7_1qkpy")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("GradientTexture2D_uq7je")

[node name="Ground" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 680.0
offset_right = 1280.0
offset_bottom = 744.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("GradientTexture2D_djcul")

[node name="Objects" type="Node2D" parent="."]

[node name="Clouds" type="Node2D" parent="Objects"]

[node name="SpawnCloudTimer" type="Timer" parent="Objects"]
wait_time = 2.0
autostart = true

[node name="Player" parent="Objects" instance=ExtResource("3_x24u5")]
position = Vector2(120, 400)

[node name="Obstacles" type="Node2D" parent="Objects"]

[node name="SpawnObstacleTimer" type="Timer" parent="Objects"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ObstacleCollector" type="Area2D" parent="."]
script = ExtResource("4_eybra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleCollector"]
position = Vector2(-25, 360)
shape = SubResource("RectangleShape2D_8yo1q")

[node name="GoalSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aww74")
volume_db = 12.0

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UserInterface"]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1178.0
offset_top = 25.0
offset_right = 1230.0
offset_bottom = 48.0
grow_horizontal = 0
text = "Score: 0"
label_settings = SubResource("LabelSettings_vkb0y")

[node name="GameOver" type="CanvasLayer" parent="UserInterface"]
process_mode = 3
visible = false
script = ExtResource("3_hro72")

[node name="GameoverLabel" type="Label" parent="UserInterface/GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -133.5
offset_right = 131.0
offset_bottom = -66.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_11ggy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="UserInterface/GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart?"

[connection signal="timeout" from="Objects/SpawnCloudTimer" to="." method="_spawn_cloud"]
[connection signal="timeout" from="Objects/SpawnObstacleTimer" to="." method="_spawn_obstacle"]
[connection signal="area_entered" from="ObstacleCollector" to="ObstacleCollector" method="_on_area_entered"]
[connection signal="pressed" from="UserInterface/GameOver/RestartButton" to="UserInterface/GameOver" method="_on_restart_pressed"]
